dark mode fix

--- a/src/styles/circuit-dark.css
+++ b/src/styles/circuit-dark.css
@@ -120,9 +120,6 @@ body {
   border: 1px solid #444c56;
 }
 
-.leaflet-layer,
-.leaflet-control-zoom-in,
-.leaflet-control-zoom-out,
-.leaflet-control-attribution {
+.leaflet-layer {
   filter: invert(100%) hue-rotate(180deg) brightness(50%) contrast(90%);
 }
